--- a/styles/index.css
+++ b/styles/index.css
@@ -3,3 +3,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/*Defining styles of markdown*/
+@layer base {
+    .markdown h1 {@apply dark:text-white text-black scroll-m-20 text-4xl font-bold tracking-tight lg:text-5xl}
+    .markdown h2 {@apply dark:text-white text-black scroll-m-20 border-b pb-2 text-3xl font-normal tracking-tight first:mt-0}
+    .markdown h3 {@apply dark:text-white text-black scroll-m-20 text-2xl font-normal tracking-tight}
+    .markdown p {@apply leading-7 [&:not(:first-child)]:mt-6 dark:text-white text-black}
+}
