--- a/styles/index.css
+++ b/styles/index.css
@@ -6,8 +6,10 @@
 
 /*Defining styles of markdown*/
 @layer base {
-    .markdown h1 {@apply dark:text-white text-black scroll-m-20 text-4xl font-bold tracking-tight lg:text-5xl}
-    .markdown h2 {@apply dark:text-white text-black scroll-m-20 border-b pb-2 text-3xl font-normal tracking-tight first:mt-0}
-    .markdown h3 {@apply dark:text-white text-black scroll-m-20 text-2xl font-normal tracking-tight}
-    .markdown p {@apply leading-7 [&:not(:first-child)]:mt-6 dark:text-white text-black}
+    .markdown h1 {@apply dark:text-white text-black scroll-m-20 my-[20px] text-4xl font-bold tracking-tight lg:text-5xl first:mt-0}
+    .markdown h2 {@apply dark:text-white text-black scroll-m-20 my-[20px] border-b pb-2 text-3xl font-normal tracking-tight first:mt-0}
+    .markdown :is(h3,h4,h5,h6) {@apply dark:text-white text-black scroll-m-20 my-[20px] text-2xl font-normal tracking-tight first:mt-0}
+    .markdown p {@apply leading-7 [&:not(:first-child)]:mt-6 dark:text-white text-black mb-[20px]}
+    .markdown ol {@apply list-decimal flex flex-col gap-[20px] ml-[20px]}
+    .markdown ol li {@apply dark:text-white text-black}
 }
