--- a/style/index.css
+++ b/style/index.css
@@ -112,6 +112,7 @@
   --sidebar-ring: oklch(0.556 0 0);
 }
 
+/* Defining typo graphys of shadcn/ui */
 @layer base {
   * {
     @apply border-border outline-ring/50;
@@ -119,5 +120,26 @@
 
   body {
     @apply bg-background text-foreground;
+  }
+
+  /* Typo graphy */
+  h1 {
+    @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+  }
+
+  h2 {
+    @apply scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight first:mt-0;
+  }
+
+  h3 {
+    @apply scroll-m-20 text-2xl font-semibold tracking-tight;
+  }
+
+  h4 {
+    @apply scroll-m-20 text-xl font-semibold tracking-tight;
+  }
+
+  p {
+    @apply leading-7 [&:not(:first-child)]:mt-6;
   }
 }
