added blog page

--- a/style/index.css
+++ b/style/index.css
@@ -142,4 +142,8 @@
   p {
     @apply leading-7 [&:not(:first-child)]:mt-6;
   }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    @apply hidden;
+  }
 }
