added markdown content for each blog page (stylings are remaninin)

--- a/style/index.css
+++ b/style/index.css
@@ -146,4 +146,10 @@
   .scrollbar-hide::-webkit-scrollbar {
     @apply hidden;
   }
+
+  .markdown {
+    h3 {
+      /* background: red; */
+    }
+  }
 }
